--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 body {
   background-color: white;
   color: white;
-  font-family: letrajuegazapata;
+  font-family: sans-serif;
 }
 
 .video-fondo {
@@ -32,7 +32,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-85%, -50%);
+  transform: translate(-55%, -50%);
 }
 .title {
   font-size: 40px;
@@ -41,83 +41,98 @@ body {
 }
 
 .equipo1 {
+  margin-top: 20px;
   position: relative;
   display: inline-block;
   grid-area: equipo1;
 }
 .equipo2 {
+  margin-top: 20px;
+
   position: relative;
   display: inline-block;
   grid-area: equipo2;
 }
 .equipo3 {
+  margin-top: 20px;
+
   position: relative;
   display: inline-block;
   grid-area: equipo3;
 }
 .equipo4 {
+  margin-top: 20px;
+
   position: relative;
   display: inline-block;
   grid-area: equipo4;
 }
 .equipo5 {
+  margin-top: 20px;
+
   position: relative;
   display: inline-block;
   grid-area: equipo5;
 }
 .equipo6 {
+  margin-top: 20px;
+
   position: relative;
   display: inline-block;
   grid-area: equipo6;
 }
 .equipo7 {
+  margin-top: 20px;
+
   position: relative;
   display: inline-block;
   grid-area: equipo7;
 }
 .equipo8 {
+  margin-top: 20px;
+
   position: relative;
   display: inline-block;
   grid-area: equipo8;
 }
 .octavo1 {
-  margin-top: 50px;
+  margin-top: 70px;
   position: relative;
   display: inline-block;
   grid-area: octavo1;
 }
 .octavo2 {
-  margin-top: 50px;
+  margin-top: 70px;
   position: relative;
   display: inline-block;
   grid-area: octavo2;
 }
 .octavo3 {
-  margin-top: 50px;
+  margin-top: 70px;
   position: relative;
   display: inline-block;
   grid-area: octavo3;
 }
 .octavo4 {
-  margin-top: 50px;
+  margin-top: 70px;
   position: relative;
   display: inline-block;
   grid-area: octavo4;
 }
 .cuarto1 {
-  margin-top: 140px;
+  margin-top: 160px;
   position: relative;
   display: inline-block;
   grid-area: cuarto1;
 }
 .cuarto2 {
-  margin-top: 140px;
+  margin-top: 160px;
   position: relative;
   display: inline-block;
   grid-area: cuarto2;
 }
 .semi1 {
-  margin-top: 300px;
+  margin-top: 320px;
   position: relative;
   display: inline-block;
   grid-area: semi1;
