--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body {
   font-family: sans-serif;
 }
 
+.title {
+  font-family: letrajuegazapata;
+}
+
 .video-fondo {
   position: fixed;
   top: 0;
