--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
 
 .title {
   font-family: letrajuegazapata;
+  font-size: 20px;
 }
 
 .video-fondo {
@@ -229,7 +230,6 @@ body {
   height: 100vh;
   width: 100vh;
   display: grid;
-
   grid-template-rows: 10px, repeat(8, 1fr);
   grid-template-columns: 150px 130px 130px 130px 130px 130px 130px 130px 150px;
   grid-template-areas:
