--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,15 @@ body {
   background-color: white;
   color: white;
   font-family: sans-serif;
+  overflow: hidden;
 }
 
 .video-fondo {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vh;
+  height: 100vh;
   overflow: hidden;
 }
 
