--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
   background-color: white;
   color: white;
-  font-family: sans-serif;
+  font-family: "Fjalla One", sans-serif;
   overflow: hidden;
 }
 
